[project]
name = "room-service"
version = "0.1.0"
description = "Meeting room service"
authors = [
    {name = "merc11less-dev",email = "gym3njoyer@yandex.ru"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn[standard] (>=0.49.0,<0.50.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.32,<0.0.33)",
    "pydantic-settings (>=2.14.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]
